--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,18 +7,17 @@
 
 body {
     height: 100vh;
-    background-image: url('/midia/1.png');
+    background-image: url('/midia/navio.jpeg');
     background-size: cover;
-    background-position: center top;
+    background-position: center bottom;
     background-repeat: no-repeat;
-    background-color: black;
     overflow-y: hidden;
 }
 
 div.container-principal {
-    width: 75vw;
-    height: 60vh;
-    margin: 20vh auto;
+    width: 80vw;
+    height: 70vh;
+    margin: 15vh auto;
 
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     backdrop-filter: blur(10px);
